// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`invalid text input 1`] = `
.pf-c-form-control {
  display: block;
  width: 100%;
  font-size: 1rem;
  line-height: 1.5;
  color: #282d33;
  background-color: #ffffff;
  border: 1px solid #72767b;
  border-radius: 3px;
}

<textarea
  aria-invalid={true}
  aria-label="invalid textarea"
  className="pf-c-form-control"
  onChange={[Function]}
  required={false}
  value="test textarea"
/>
`;

exports[`simple text input 1`] = `
.pf-c-form-control {
  display: block;
  width: 100%;
  font-size: 1rem;
  line-height: 1.5;
  color: #282d33;
  background-color: #ffffff;
  border: 1px solid #72767b;
  border-radius: 3px;
}

<textarea
  aria-invalid={false}
  aria-label="simple textarea"
  className="pf-c-form-control"
  onChange={[Function]}
  required={false}
  value="test textarea"
/>
`;
